--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: 15vh;
 }
 
 .section-blog h1 {
