--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,3 +547,32 @@
     font-size: 170%;
     padding-top: 10vh;
 }
+
+@media screen and (max-width: 768px) {
+    .section1 h1 {
+        font-size: 250%;
+        margin-top: 15vh;
+    }
+
+    .section3 p {
+        font-size:80%;
+    }
+
+    .section4 p {
+        font-size:80%;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    body {
+        width: 480px;
+    }
+
+    .nav {
+        width: 480px;
+    }
+    
+    .nav img {
+        width: 80%;
+    }
+}
