--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,15 +564,129 @@
 }
 
 @media screen and (max-width: 390px) {
-    body {
-        width: 480px;
-    }
 
-    .nav {
-        width: 480px;
-    }
     
     .nav img {
+        width: 60%;
+        height: 60%;
+    }
+
+    .section1 {
+        padding: 3vh;
+    }
+
+    .section1 h1 {
+        font-size: 150%;
+        margin: 0 0 0 5vw;
+    }
+
+    .section1 p {
+        font-size: 90%;
+        margin: 0 0 1vh 5vw;
+    }
+
+    .section1 a {
+        font-size: 70%;
+        margin: 0 0 0 5vw;
+    }
+
+    .section1 img {
+        width: 40vw;
+        margin: 0 3vw 0 0;
+        padding: 0;
+    }
+
+    .section2 {
+        padding: 2vh;
+        justify-content: center;
+    }
+
+    .section2 img {
         width: 80%;
+        height: 80%;
+        margin: 0;
+    }
+
+    .section2 h3 {
+        font-size: 80%;
+        align-items: center;
+        justify-content: center;
+        width: 25vw;
+        margin: 2vh 0 0 0;
+        text-align: center;
+    }
+
+    .section2 p {
+        font-size: 60%;
+        margin: 2vh 0 0 0 ;
+        width: 28vw;
+    }
+
+    .section2 a {
+        font-size: 70%;
+        width: 20vw;
+        padding: 2px 12px;
+        margin: 2vh 0 0 0 ;
+    }
+
+    .h2-grid {
+        padding: 2vh 5vh;
+    }
+
+    .section3 {
+        margin: 0;
+        padding-bottom: 10vh;
+    }
+
+    .section3 div {
+        flex-direction: column;
+    }
+
+    .section3 img {
+        width: 40%;
+        margin: 4vh 0 2vh 0 ;
+    }
+
+    .section3 p {
+        font-size: 70%;
+        width: 100px;
+        height: 10vh;
+        margin: 0 0 5vh 0;
+        justify-content: center;
+    }
+
+    .h2-grid2 {
+        padding: 7vw;
+    }
+
+    .section4 h4 {
+        font-size: 70%;
+    }
+
+    .section4 p {
+        font-size: 70%;
+        margin-top: 1vh;
+    }
+
+    .btn2 {
+        margin: 3vh;
+    }
+
+    .logo {
+        width: 40%;
+        height: 40%;
+    }
+
+    .btn-footer {
+        font-size: 60%;
+        padding: 4.3px;
+    }
+
+    .li-nav {
+        font-size: 70%;
+    }
+
+    .link-footer {
+        margin: 2vh 0 2vh 0 ;
     }
 }
